[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-trending-feishu-card"
version = "0.1.0"
description = "Fetch GitHub Trending, write to Feishu Bitable, and send Feishu card"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.28",
  "beautifulsoup4>=4.10",
]

[project.scripts]
github-trending-feishu = "github_trending_feishu_card:main"

[tool.setuptools]
py-modules = ["github_trending_feishu_card"]

